--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/Unarekin/cryptography-algorithms.git"
   },
-  "author": "Samuel Phelps",
+  "author": "Erica Phelps",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Unarekin/cryptography-algorithms/issues"
